--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -18,24 +18,24 @@ h2. Karaf
 | karaf-2.2.x | 4.2 | 5 / 6 | EOL/NotActive | 2.2.9 | | |
 | karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.10 | 2.3.11 | |
 | karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | 2.4.3 | 2.4.4 | |
-| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Stable/In Maintenance | 3.0.4 | 3.0.5 | 2015/10/01 |
-| master (4.0.x) | 5 | 7 / 8 | Current Stable | 4.0.1 | 4.0.2 | 2015/10/07 |
+| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Stable/In Maintenance | 3.0.5 | 3.0.6 | |
+| master (4.0.x) | 5 | 7 / 8 | Current Stable | 4.0.1 | 4.0.2 | 2015/10/08 |
 
 h2. Cellar
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
 | cellar-2.2.x | 2.2.x | EOL/NotActive | 2.2.6 | | |
-| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.5 | 2.3.6 | 2015/09/27 |
-| cellar-3.0.x | 3.0.x | Current Stable/In Maintenance | 3.0.2 | 3.0.3 | 2015/09/27 |
+| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.5 | 2.3.6 | |
+| cellar-3.0.x | 3.0.x | Current Stable/In Maintenance | 3.0.2 | 3.0.3 | |
 | master (4.0.x) | 4.0.x | Development | | 4.0.0 | 2015/09/25 |
 
 h2. Cave
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
 | cave-3.0.x | 3.0.x | Current Stable/In Maintenance | 3.0.0 | 3.0.1 | |
-| master (4.0.x) | 4.0.x | Development | 4.0.0 | 4.0.1 | 2015/10/05 | |
+| master (4.0.x) | 4.0.x | Development | 4.0.0 | 4.0.1 | |
 
 h2. Decanter
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
-| master | 2/3/4 | Development | 1.0.0 | 1.0.1 | 2015/10/10 | |
+| master | 2/3/4 | Development | 1.0.0 | 1.0.1 | |
