--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -1,8 +1,8 @@
 ---
 title: Download
-page_version: 15
+page_version: 16
 page_creator: gnodet
-page_modifier: gnodet
+page_modifier: jbonofre
 --- pipeline:conf
 h2. Latest Releases
 {section}
@@ -19,13 +19,13 @@ h2. Latest Releases
 Grab these releases while they are hot!
 
 The latest 4.0.x release is [Karaf 4.0.1|download/karaf-4.0.1-release.html].
-The latest 3.0.x release is [Karaf 3.0.4|download/karaf-3.0.4-release.html].
+The latest 3.0.x release is [Karaf 3.0.5|download/karaf-3.0.5-release.html].
 The latest 2.4.x release is [Karaf 2.4.3 Release|download/karaf-2.4.3-release.html].
 The latest 2.3.x release is [Karaf 2.3.11 Release|download/karaf-2.3.11-release.html].
 
 Releases:
 * [#Karaf 4.0.1]
-* [#Karaf 3.0.4]
+* [#Karaf 3.0.5]
 * [#Karaf 2.4.3]
 * [#Karaf 2.3.11]
 
@@ -60,26 +60,26 @@ h3. Manual
 |HTML Manual| [manual-4.0.1.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.1/manual-4.0.1.html] |
 |PDF Manual| [manual-4.0.1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.1/manual-4.0.1.pdf] |
 
-h2. Karaf 3.0.4
+h2. Karaf 3.0.5
 
-[Release Notes|download/karaf-3.0.4-release.html]
+[Release Notes|download/karaf-3.0.5-release.html]
 
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-3.0.4.zip|http://www.apache.org/dyn/closer.lua/karaf/3.0.4/apache-karaf-3.0.4.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.4.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/3.0.4/apache-karaf-3.0.4.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4-apache-karaf-3.0.4.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-3.0.5.zip|http://www.apache.org/dyn/closer.lua/karaf/3.0.5/apache-karaf-3.0.5.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.5.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/3.0.5/apache-karaf-3.0.5.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.5-apache-karaf-3.0.5.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-3.0.4-src.zip|http://www.apache.org/dyn/closer.lua/karaf/3.0.4/apache-karaf-3.0.4-src.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.4-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-3.0.5-src.zip|http://www.apache.org/dyn/closer.lua/karaf/3.0.5/apache-karaf-3.0.5-src.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.5-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
-|HTML Manual| [manual-3.0.4.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.4/manual-3.0.4.html] |
-|PDF Manual| [manual-3.0.4.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.4/manual-3.0.4.pdf] |
+|HTML Manual| [manual-3.0.5.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.5/manual-3.0.5.html] |
+|PDF Manual| [manual-3.0.5.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.5/manual-3.0.5.pdf] |
 
 h2. Karaf 2.4.3
 
