--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -1,12 +1,33 @@
 ---
 title: Archives
-page_version: 2
+page_version: 3
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h1. Releases history
 
 {toc:minLevel=2|maxLevel=2}
+
+h2. Karaf 4.0.1
+
+[Release Notes|download/karaf-4.0.1-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-4.0.1.zip|ht3tp://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip]|[PGP|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-4.0.1.tar.gz|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.1-apache-karaf-4.0.1.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-4.0.1-src.zip|http://archive.apache.org/dist.cgi/karaf/4.0.1/apache-karaf-4.0.1-src.zip]|[PGP|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-4.0.1-src.tar.gz|http://archive.apache.org/dist/closer.lua/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-4.0.1.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.1/manual-4.0.1.html] |
+|PDF Manual| [manual-4.0.1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.1/manual-4.0.1.pdf] |
 
 h2. Karaf 4.0.0
 
@@ -91,6 +112,48 @@ h3. Manual
 ||Description||Download Link||
 |HTML Manual| [manual-4.0.0.M1.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.0.M1/manual-4.0.0.M1.html] |
 |PDF Manual| [manual-4.0.0.M1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.0.M1/manual-4.0.0.M1.pdf] |
+
+h2. Karaf 3.0.5
+
+[Release Notes|download/karaf-3.0.5-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-3.0.5.zip|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.zip]|[PGP|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.5.tar.gz|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.1.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.5-apache-karaf-3.0.5.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-3.0.5-src.zip|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.zip]|[PGP|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.5-src.tar.gz|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-3.0.5.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.5/manual-3.0.5.html] |
+|PDF Manual| [manual-3.0.5.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.5/manual-3.0.5.pdf] |
+
+h2. Karaf 3.0.4
+
+[Release Notes|download/karaf-3.0.4-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-3.0.4.zip|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip]|[PGP|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.4.tar.gz|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.1.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.4-apache-karaf-3.0.4.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-3.0.4-src.zip|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip]|[PGP|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.4-src.tar.gz|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-3.0.4.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.4/manual-3.0.4.html] |
+|PDF Manual| [manual-3.0.4.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.4/manual-3.0.4.pdf] |
 
 h2. Karaf 3.0.3
 
