--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -1,12 +1,14 @@
 ---
-title: Karaf 4.0.2 
+title: Karaf 4.0.3 
 page_version: 23
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 {section}
 {column}
-Apache Karaf is a small OSGi based runtime which provides a lightweight container onto which various components and applications can be deployed.
+Apache Karaf is a modern and polymorphic container.
+It's a lightweight, powerful, and enterprise ready container powered by OSGi.
+The container is able to host different kind of applications, OSGi or non OSGi.
 
 Here is a short list of features supported by the Karaf:
 {include: Karaf Features}
@@ -15,11 +17,11 @@ Here is a short list of features supported by the Karaf:
 {column}
 {column}
 {center}
-*[Download Karaf 4.0.2|index/community/download.html#Karaf4.0.2]*
+*[Download Karaf 4.0.3|index/community/download.html#Karaf4.0.3]*
 *[Download Karaf 3.0.5|index/community/download.html#Karaf3.0.5]*
 *[Download Karaf 2.4.3|index/community/download.html#Karaf2.4.3]*
 *[Download Karaf 2.3.11|index/community/download.html#Karaf2.3.11]*
-[!/images/karaf-box.png|width=256!|index/community/download.html#Karaf4.0.2]
+[!/images/karaf-box.png|width=256!|index/community/download.html#Karaf4.0.3]
 {center}
 {html}
 <script src="http://widgets.twimg.com/j/2/widget.js"></script>
@@ -62,6 +64,7 @@ new TWTR.Widget({
 
 
 h2. News
+{include:news-2015-11-10}
 {include:news-2015-10-13}
 {include:news-2015-10-07}
 {include:news-2015-09-27}
@@ -73,4 +76,3 @@ h2. News
 {include:news-2015-06-26}
 {include:news-2015-06-08}
 {include:news-2015-05-12}
-{include:news-2015-04-25}
