--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,10 +1,11 @@
 ---
 title: News
-page_version: 17
+page_version: 18
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-11-10}
 {include:news-2015-10-13}
 {include:news-2015-10-07}
 {include:news-2015-09-27}
