--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -18,8 +18,8 @@ h2. Karaf
 | karaf-2.2.x | 4.2 | 5 / 6 | EOL/NotActive | 2.2.9 | | |
 | karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.10 | 2.3.11 | |
 | karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | 2.4.3 | 2.4.4 | |
-| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Stable/In Maintenance | 3.0.5 | 3.0.6 | |
-| master (4.0.x) | 5 | 7 / 8 | Current Stable | 4.0.2 | 4.0.3 | |
+| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Stable/In Maintenance | 3.0.5 | 3.0.6 | 2015-11-30 |
+| master (4.0.x) | 5 | 7 / 8 | Current Stable | 4.0.3 | 4.0.4 | 2015-12-15 |
 
 h2. Cellar
 
@@ -38,4 +38,4 @@ h2. Cave
 h2. Decanter
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
-| master | 2/3/4 | Development | 1.0.0 | 1.0.1 | |
+| master | 2/3/4 | Development | 1.0.0 | 1.0.1 | 2015-11-11 |
