Announce decanter 1.0.1 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1714517 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-11-16}
 {include:news-2015-11-10}
 {include:news-2015-10-13}
 {include:news-2015-10-07}
