--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,10 +1,11 @@
 ---
 title: News
-page_version: 19
+page_version: 20
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2016-01-25}
 {include:news-2016-01-14}
 {include:news-2015-11-16}
 {include:news-2015-11-10}
