Fixed the mobile rendering issue
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1728826 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/css/karaf.css
+++ b/src/main/webapp/css/karaf.css
@@ -552,6 +552,10 @@ li.L1,li.L3,li.L5,li.L7,li.L9{background:#eee}
         text-align: center;
     }
 
+    .homepage--body .hero--banner {
+        max-height: none;
+    }
+
 }
 
 .community li{
