--- a/src/main/webapp/css/karaf.css
+++ b/src/main/webapp/css/karaf.css
@@ -237,6 +237,7 @@ code{font-size:14px}body{background-color:#f1f1f1}
 .header--navbar .navbar-inner .navbar-link.active a{background-color:#1E83D6;box-shadow:none}
 
 .header--navbar .navbar-inner .navbar-link a{color:#eee;font-family:Montserrat,sans-serif;text-transform:uppercase;text-shadow:none;font-size:14px;line-height:14px;padding:28px 25px;transition:all .15s;-webkit-transition:all .15s;-moz-transition:all .15s;-o-transition:all .15s;-ms-transition:all .15s}
+.header--navbar .navbar-inner .navbar-link-logo a{color:#eee;font-family:Montserrat,sans-serif;text-transform:uppercase;text-shadow:none;font-size:14px;line-height:14px;padding-top: 14px;transition:all .15s;-webkit-transition:all .15s;-moz-transition:all .15s;-o-transition:all .15s;-ms-transition:all .15s}
 .header--navbar .navbar-inner .navbar-link:hover a{color:#eee;background-color:#1E83D6}
 .header--navbar .navbar-inner .navbar-link.nav-search{padding:20px 0 23px}
 .header--navbar .navbar-inner .navbar-link.nav-search .navbar-search--icon{color:#eee;font-size:24px;padding:3px 16px 3px 18px;cursor:pointer}
